[+] add one chapter

--- a/notes/1.Framing.md
+++ b/notes/1.Framing.md
@@ -1,19 +1,25 @@
-# 问题构建
+> 学习目标：
+>
+> - 复习机器学习基本术语
+> - 了解机器学习各种用途
+
+## 问题构建
+
 监督机器学习可简单定义如下：
 - 机器学习系统通过学习如何组合输入信息来对从未见过的数据做出有用的预测。
 
-## 基本术语
+### 基本术语
 
-### 标签(label)
+#### 标签(label)
 **标签**是要预测的事物，简单线性回归中的 y 变量。
 > 标签可以是小麦未来的价格、图片中显示的动物品种、音频剪辑的含义或任何事物。
 
-### 特征(features)
+#### 特征(features)
 **特征**是输入变量，即简单线性回归中的 x 变量。
 > 简单的机器学习项目可能会使用单个特征，而比较复杂的机器学习项目可能会使用数百万个特征，按如下方式指定：
 $$\{x_1,x_2,\dots,x_N\}$$
 
-### 样本(example)
+#### 样本(example)
 **样本**是指数据的特定实例，**x**，分为：
  - 有标签样本
  - 无标签样本
@@ -30,12 +36,12 @@ $$\{x_1,x_2,\dots,x_N\}$$
 **无标签样本**包含特征但不包含标签。
 > 无标签样本可以是新的待估价的住房信息
 
-### 模型(model)
+#### 模型(model)
 模型定义了特征与标签之间的关系。
  - **训练**表示创建或学习模型。
  - **推断**表示将训练后的模型应用于无标签样本。
 
-### 回归与分类(Regression and Classification)
+#### 回归与分类(Regression and Classification)
 **回归**模型可以预测连续值。如：
  - 加利福尼亚州一栋房产的价值是多少？
  - 用户点击此广告的概率是多少？
