--- a/notes/2.Descending_into_ML.md
+++ b/notes/2.Descending_into_ML.md
@@ -1,3 +1,12 @@
+> 学习目标：
+>
+> - 复习直线拟合知识
+> - 机器学习中的权重和偏差和直线拟合中的斜率和偏移联系起来
+> - 大致了解损失(Loss)，详细了解平方损失(Squared Error)
+> - 了解如何使用迭代方法来训练模型
+> - 全面了解梯度下降法和一些变体如(小批量梯度下降，随机梯度下降)
+> - 尝试不同的学习速率
+
 ## 深入了解机器学习(Descending into ML)
 
 ### 线性回归(Linear Regression)
