--- a/notes/3.Hello_TensorFlow.md
+++ b/notes/3.Hello_TensorFlow.md
@@ -1,4 +1,10 @@
+> 学习目标：
+>
+> - TensorFlow和Pandas的一些基本操作
+> - 使用TensorFlow高级API
+
 ## 使用TensorFlow工具包
+
 - 层次结构
 
   ![image-20181109153904778](assets/image-20181109153904778.png)
@@ -10,5 +16,5 @@
 
 ```tf.estimator```与scikit-learn API兼容。
 
-查看[first_step_with_tensorflow.ipynb](../first_step_with_tensorflow.ipynb)
+编程参看[first_step_with_tensorflow.ipynb](../first_step_with_tensorflow.ipynb)
 
