--- a/notes/4.Generalization.md
+++ b/notes/4.Generalization.md
@@ -1,8 +1,13 @@
+> 学习目标：
+>
+> - 理解什么是过拟合
+> - 判定一个模型是否出色，数据集的划分
+
 ## 过拟合的风险 
 
 导致模型在训练集上损失很低，但是在新数据上的预测能力很糟糕。 
 
-机器学习要适合地拟合我们的数据，但也要尽可能简单的拟合数据。遵循：奥卡姆剃刀定律。 
+机器学习要适合地拟合我们的数据，但也要尽可能简单的拟合数据。遵循：**奥卡姆剃刀定律**。 
 
 > 一个机器学习模型越简单，一个良好的经验结果就不只是由于样本的特性而得到的。 
 
