--- a/notes/6.Representation.md
+++ b/notes/6.Representation.md
@@ -1,3 +1,11 @@
+> 学习目标：
+>
+> - 将日志中的字段映射到实用的机器学习特征
+> - 判断哪些数据特性适合作为学习特征
+> - 处理离群值特征
+> - 数据集统计属性
+> - 使用tf.estimator训练评估模型
+
 ## 表示法(特征工程)
 
 ### 从原始数据映射到特征
@@ -113,7 +121,7 @@
 
 图4. 很长的尾巴
 
-可以发现该特征有一些离群的值，我们用最大限度的降低这些值带来的影响
+可以发现该特征有一些离群的值，我们应该最大限度地降低这些值带来的影响
 
 ##### 对数缩放
 
