--- a/notes/0.Preparing.md
+++ b/notes/0.Preparing.md
@@ -8,9 +8,9 @@
 
 机器学习速成课程中的编程练习使用 TensorFlow 的高阶 [tf.estimator API](https://www.tensorflow.org/api_docs/python/tf/estimator/Estimator) 来配置模型。如果您有兴趣从头开始构建 TensorFlow 模型，请学习以下教程：
 
-- [TensorFlow Hello World](https://colab.research.google.com/notebooks/mlcc/hello_world.ipynb?utm_source=mlcc&utm_campaign=colab-external&utm_medium=referral&utm_content=helloworld-colab&hl=zh-cn)：在低阶 TensorFlow 中编码的“Hello World”。编程参看[hello_tf.ipynb](./hello_tf.ipynb)
+- [TensorFlow Hello World](https://colab.research.google.com/notebooks/mlcc/hello_world.ipynb?utm_source=mlcc&utm_campaign=colab-external&utm_medium=referral&utm_content=helloworld-colab&hl=zh-cn)：在低阶 TensorFlow 中编码的“Hello World”。编程参看[hello_tf.ipynb](../code/hello_tf.ipynb)
 - [TensorFlow 编程概念](https://colab.research.google.com/notebooks/mlcc/tensorflow_programming_concepts.ipynb?utm_source=mlcc&utm_campaign=colab-external&utm_medium=referral&utm_content=tfprogconcepts-colab&hl=zh-cn)：演示了 TensorFlow 应用中的基本组件：张量、指令、图和会话。
-- [创建和操控张量](https://colab.research.google.com/notebooks/mlcc/creating_and_manipulating_tensors.ipynb?utm_source=mlcc&utm_campaign=colab-external&utm_medium=referral&utm_content=tensors-colab&hl=zh-cn)：张量快速入门 - TensorFlow 编程中的核心概念。此外，还回顾了线性代数中的矩阵加法和乘法概念。编程参看[tensors_in_tf.ipynb](./tensors_in_tf.ipynb)
+- [创建和操控张量](https://colab.research.google.com/notebooks/mlcc/creating_and_manipulating_tensors.ipynb?utm_source=mlcc&utm_campaign=colab-external&utm_medium=referral&utm_content=tensors-colab&hl=zh-cn)：张量快速入门 - TensorFlow 编程中的核心概念。此外，还回顾了线性代数中的矩阵加法和乘法概念。编程参看[tensors_in_tf.ipynb](../code/tensors_in_tf.ipynb)
 
 ## 主要概念和工具
 
