--- a/notes/6.Representation.md
+++ b/notes/6.Representation.md
@@ -194,4 +194,4 @@
 
 谨慎处理数据，**良好的机器学习模型依赖于良好的数据**。
 
-编程参见: [feature_sets.ipynb](./featrue_sets.ipynb)
+编程参见: [feature_sets.ipynb](../code/feature_sets.ipynb)
