--- a/notes/7.Feature_Crosses.md
+++ b/notes/7.Feature_Crosses.md
@@ -56,5 +56,5 @@ binned_latitude x binned_longitude
 - 使用特征组合+大量数据是学习高度复杂模型的一种有效策略
   - （神经网络可提供另一种策略）
 
-编程参见：[feature_crosses.ipynb](./feature_crosses.ipynb)
+编程参见：[feature_crosses.ipynb](../code/feature_crosses.ipynb)
 
