[+] finished main ml part

--- a/notes/11.Regularization_for_Sparsity.md
+++ b/notes/11.Regularization_for_Sparsity.md
@@ -1,3 +1,8 @@
+> 学习目标：
+>
+> - 了解如何使信息缺乏的系数值正好为 0，以便节省 RAM
+> - 了解 L2 正则化之外的其他类型的正则化
+
 ## 稀疏性正则化(L1正则化) 
 
 稀疏矢量往往包含了许多维度，创建特征组合会导致包含更多的维度，这样可能会造成模型十分庞大，且需要大量的RAM。
