--- a/notes/13.Training_Neural_Networks.md
+++ b/notes/13.Training_Neural_Networks.md
@@ -1,3 +1,7 @@
+学习目标：
+
+- 了解反向传播算法
+
 ## 训练神经网络
 
 **反向传播算法(Back propagation)**是最常见的一种神经网络训练算法，一个直观的可视化的例子：[反向传播直观解释](https://google-developers.appspot.com/machine-learning/crash-course/backprop-scroll/)
