alter the files name

--- a/notes/00.Preparing.md
+++ b/notes/00.Preparing.md
@@ -1,10 +1,10 @@
-## 前提准备
+# CH0.前提准备
 
-### Pandas 使用入门
+## 0.1Pandas 使用入门
 
 机器学习速成课程中的编程练习使用 [Pandas](http://pandas.pydata.org/) 库来操控数据集。如果您不熟悉 Pandas，建议您先学习[Pandas 简介](https://colab.research.google.com/notebooks/mlcc/intro_to_pandas.ipynb?utm_source=mlcc&utm_campaign=colab-external&utm_medium=referral&utm_content=pandas-colab&hl=zh-cn)教程，该教程介绍了练习中使用的主要 Pandas 功能。编程参看[hello_pandas.ipynb](./hello_pandas.ipynb)
 
-### 低阶 TensorFlow 基础知识
+## 0.1低阶 TensorFlow 基础知识
 
 机器学习速成课程中的编程练习使用 TensorFlow 的高阶 [tf.estimator API](https://www.tensorflow.org/api_docs/python/tf/estimator/Estimator) 来配置模型。如果您有兴趣从头开始构建 TensorFlow 模型，请学习以下教程：
 
@@ -46,9 +46,9 @@
 - [偏导数](https://wikipedia.org/wiki/Partial_derivative)（与梯度紧密相关）
 - [链式法则](https://wikipedia.org/wiki/Chain_rule)（带您全面了解用于训练神经网络的[反向传播算法](https://developers.google.com/machine-learning/crash-course/backprop-scroll/)）
 
-### Python 编程
+## Python 编程
 
-#### 基础 Python
+### 基础 Python
 
 [Python 教程](https://docs.python.org/3/tutorial/)中介绍了以下 Python 基础知识：
 
@@ -60,43 +60,43 @@
 - 变量、赋值、[基本数据类型](https://docs.python.org/3/tutorial/introduction.html#using-python-as-a-calculator)（`int`、`float`、`bool`、`str`）
 - [`pass` 语句](https://docs.python.org/3/tutorial/controlflow.html#pass-statements)
 
-#### 中级 Python
+### 中级 Python
 
 [Python 教程](https://docs.python.org/3/tutorial/)还介绍了以下更高级的 Python 功能：
 
 - [列表推导式](https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions)
 - [Lambda 函数](https://docs.python.org/3/tutorial/controlflow.html#lambda-expressions)
 
-### 第三方 Python 库
+## 第三方 Python 库
 
 机器学习速成课程代码示例使用了第三方库提供的以下功能。无需提前熟悉这些库；您可以在需要时查询相关内容。
 
-#### [Matplotlib](http://matplotlib.org/contents.html)（适合数据可视化）
+### [Matplotlib](http://matplotlib.org/contents.html)（适合数据可视化）
 
 - [`pyplot`](http://matplotlib.org/api/pyplot_api.html) 模块
 - [`cm`](http://matplotlib.org/api/cm_api.html) 模块
 - [`gridspec`](http://matplotlib.org/api/gridspec_api.html) 模块
 
-#### [Seaborn](http://seaborn.pydata.org/index.html)（适合热图）
+### [Seaborn](http://seaborn.pydata.org/index.html)（适合热图）
 
 - [`heatmap`](http://seaborn.pydata.org/generated/seaborn.heatmap.html) 函数
 
-#### [Pandas](http://pandas.pydata.org/)（适合数据处理）
+### [Pandas](http://pandas.pydata.org/)（适合数据处理）
 
 - [`DataFrame`](http://pandas.pydata.org/pandas-docs/stable/dsintro.html#dataframe) 类
 
-#### [NumPy](http://www.numpy.org/)（适合低阶数学运算）
+### [NumPy](http://www.numpy.org/)（适合低阶数学运算）
 
 - [`linspace`](https://docs.scipy.org/doc/numpy-1.10.0/reference/generated/numpy.linspace.html) 函数
 - [`random`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.random.random.html#numpy.random.random) 函数
 - [`array`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.array.html) 函数
 - [`arange`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html) 函数
 
-#### [scikit-learn](http://scikit-learn.org/)（适合评估指标）
+### [scikit-learn](http://scikit-learn.org/)（适合评估指标）
 
 - [metrics](http://scikit-learn.org/stable/modules/classes.html#module-sklearn.metrics) 模块
 
-### Bash 终端/云端控制台
+## Bash 终端/云端控制台
 
 要在本地计算机上或云端控制台中运行编程练习，您应该能熟练使用命令行：
 
@@ -105,3 +105,8 @@
 - [Bash 快速参考表](https://github.com/LeCoupa/awesome-cheatsheets/blob/master/languages/bash.sh)
 
 - [了解 Shell](http://www.learnshell.org/)
+
+
+
+[返回目录](../README.md) | 上一章 | [下一章 语言可用性强化](./01-usability.md)
+
