--- a/notes/09.Logistic_Regression.md
+++ b/notes/09.Logistic_Regression.md
@@ -27,11 +27,13 @@
 
 **图1. Sigmoid函数**(S型函数)
 
-我们用$z$表示逻辑回归模型的线性层输出，则S(z)函数会生成一个介于0-1之间的概率，表示为：$y\prime=\frac{1}{1+e^{(-z)}}$
+我们用$z$表示逻辑回归模型的线性层输出，则S(z)函数会生成一个介于0-1之间的概率，表示为：
+
+$$y'=\frac{1}{1+e^{(-z)}}$$
 
 其中：
 
-- $y\prime$是逻辑回归模型针对特定样本的输出
+- $y'$是逻辑回归模型针对特定样本的输出
 
 - $z$是$w_0+w_1x_1+w_2x_2+\dots+w_nx_n$
 
@@ -48,13 +50,13 @@
 
 线性回归的损失函数是平方损失函数，逻辑回归的损失函数是**对数损失函数**，定义为：
 
-$$LogLoss = \sum_{(x,y)\in D}{-ylog(y\prime)-(1-y)log(1-y\prime)}$$
+$$LogLoss = \sum_{(x,y)\in D}{-ylog(y')-(1-y)log(1-y')}$$
 
 其中：
 
 - $(x,y)\in D$是包含很多有样本标签(x,y)的数据集。
 - $y$是样本的标签，逻辑回归中必须是0或者1
-- $y\prime $是对特征集x的预测值，介于0-1之间
+- $y'$是对特征集x的预测值，介于0-1之间
 
 可以发现，对数损失函数的方程式和香农信息论中的熵测量有密切的关系。它也是似然函数的负对数（假设y属于伯努利分布). 实际上，最大限度地降低损失函数的值会生成最大的似然估计值。
 
